--- a/index.html
+++ b/index.html
@@ -13,28 +13,21 @@
     <nav>
         <div class="logo">
             <a href="#">
-                <div class="degrade">
-                    <h1>ULTRALOGO</h1>
+                <div id="imgLogo">
+                    <img width="100%" src="images/logo.png" alt="">
                 </div>
             </a>
         </div>
         <div class="openMenu"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu">
-            <li class="fexaA"><a href="#">botão</a></li>
-            <li class="fexaB"><a href="#">botão</a></li>
-            <li class="fexaC"><a href="#">botão</a></li>
-            <li class="fexaD"><a href="#">botão</a></li>
-            <li class="fexaE"><a href="#">botão</a></li>
+            <li class="fexaA"><a href="#">SOBRE</a></li>
+            <li class="fexaB"><a href="#">BOTAO</a></li>
+            <li class="fexaC"><a href="#">BOTAO</a></li>
+            <li class="fexaD"><a href="#">BOTAO</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
         </ul>
     </nav>
-    <!--sectionOne-->
-
-    <!--sectionTre-->
-
-    <!--sectionFour-->
-
-
+ 
 
     <!-- script -->
     <script src="app.js"></script>
