--- a/index.html
+++ b/index.html
@@ -28,6 +28,70 @@
         </ul>
     </nav>
  
+    <!--Baner-->
+    <div id="banner">
+        <h1>Exemplo Exemplo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+    </div>
+
+    <!--Imagem-->
+    <div class="parallaxA"></div>
+
+    <!--Texto-->
+    <div class="textos">
+        <h1>Texto Exemplo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+    </div>
+
+
+    <!--Imagem-->
+    <div class="parallaxB"></div>
+
+
+    <!--Texto-->
+    <div class="textos">
+        <h1>Texto Exemplo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+    </div>
+
+    <!--Footer-->
+    <div id="footer" class="texto centro">
+        <div class="responsiveBox">
+            <div class="responsiveItem">
+                <img width="100%" src="images/logoBorda.png" alt="">
+                <ul class="centro">
+                    <li>
+                        <p class="centro">(xx)-xxxx-xxxx<i class="fa fa-phone"></i></p>
+                    </li>
+                    <li>
+                        <p>email@email.com<i class="fa fa-envelope"></i></p>
+                    </li>
+                </ul>
+            </div>
+            <div class="responsiveItem centro">
+                <ul class="centro">
+                    <li>
+                        <a href="#"><i class="fa fa-camera-retro"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-envelope"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-paper-plane"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-phone"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <!-- script -->
     <script src="app.js"></script>
