--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlaceHolder</title>
+    <title>KMcash</title>
+    <link rel="icon" type="image/png" href="assets/images/minilogo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.css">
 </head>
@@ -14,50 +15,94 @@
         <div class="logo">
             <a href="#">
                 <div id="imgLogo">
-                    <img width="100%" src="images/logo.png" alt="">
+                    <img width="70%" src="assets/images/logo.png" alt="">
                 </div>
             </a>
         </div>
         <div class="openMenu"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu">
-            <li class="fexaA"><a href="#">SOBRE</a></li>
-            <li class="fexaB"><a href="#">BOTAO</a></li>
-            <li class="fexaC"><a href="#">BOTAO</a></li>
-            <li class="fexaD"><a href="#">BOTAO</a></li>
+            <li class="fexaA"><a href="#quemsomos">Quem Somos</a></li>
+            <li class="fexaB"><a href="#ondeestamos">Onde Estamos</a></li>
+            <li class="fexaC"><a href="#motorista">Motorista</a></li>
+            <li class="fexaD"><a href="#cliente">Cliente</a></li>
+            <li class="fexaE"><a href="#faleconosco">Fale Conosco</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
         </ul>
     </nav>
  
     <!--Baner-->
     <div id="banner">
-        <h1>Exemplo Exemplo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        <h1>Texto Temporario</h1>
     </div>
 
-    <!--Imagem-->
-    <div class="parallaxA"></div>
-
-    <!--Texto-->
-    <div class="textos">
-        <h1>Texto Exemplo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+    <!--quem somos-->
+    <div id="quemsomos" class="textos grade2">
+        <div class="textsize textLeft">
+            <h1>Texto Exemplo</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+        </div>
+        <div>
+            <img class="carro1" float="center" src="assets/images/temp2.png" alt="">
+        </div>
     </div>
 
+    <!--ondeestamos-->
+    <div id="ondeestamos" class="textos grade2">
+        <div>
+            <img class="carro1" float="center" src="assets/images/mapa.png" alt="">
+        </div>
+        <div class="textsize textRight">
+            <h1>Texto exemplar</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
 
-    <!--Imagem-->
-    <div class="parallaxB"></div>
+    <!--motoristas-->
+    <div id="motorista" class="textos grade2">
+        <div class="textsize textLeft">
+            <h1>Jornada do Motorista</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <a href="https://play.google.com/store/apps/details?id=com.kmcash.app"><button id="botao">Seja Um Motorista Parceiro!</button></a>
+        </div>
+        <div>
+            <img class="carro1" float="center" src="assets/images/temp3.png" alt="">
+        </div>
+    </div>
 
+    <!--cliente-->
+    <div id="cliente" class="textos grade2">
+        <div>
+            <img class="carro1" float="center" src="assets/images/temp4.png" alt="">
+        </div>
+        <div class="textsize textRight">
+            <h1>Jornada do Cliente</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <p>Lorem ipsum dolor sit.</p>
+            <a href="#faleconosco"><button id="botao">Entre em contato conosco!</button></a>
+        </div>
+    </div>
 
-    <!--Texto-->
-    <div class="textos">
-        <h1>Texto Exemplo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus tempore consequuntur sapiente itaque praesentium? Consequuntur voluptatibus officiis, possimus, sit velit explicabo enim quibusdam quaerat accusamus autem illum porro nulla totam?</p>
+    <!--Fale conosco-->
+    <div id="faleconosco">
+        <div class="total">
+            <h1>fale conosco</h1>
+        <form class="submission-form" action="https://formsubmit.co/depois.com" method="post">
+            <div class="formAreas left">
+                <label for="first-name">Nome</label>
+                <input type="text" name="nome" id="first-name">
+            </div>
+            <div class="formAreas right">
+                <label for="phone">Telefone</label>
+                <input type="tel" name="telefone" id="phone">
+            </div>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email">
+            <label for="message">Mensagem</label>
+            <textarea id="message" name="mensagem"></textarea>
+            <input type="submit" value="enviar" id="sendBtn">
+          </form>
+        </div>
     </div>
 
     <!--Footer-->
