--- a/index.html
+++ b/index.html
@@ -86,23 +86,23 @@
 
     <!--Fale conosco-->
     <div id="faleconosco">
-        <div class="total">
+        <div class="totalFinal">
             <h1>fale conosco</h1>
-        <form class="submission-form" action="https://formsubmit.co/depois.com" method="post">
-            <div class="formAreas left">
-                <label for="first-name">Nome</label>
-                <input type="text" name="nome" id="first-name">
-            </div>
-            <div class="formAreas right">
-                <label for="phone">Telefone</label>
-                <input type="tel" name="telefone" id="phone">
-            </div>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email">
-            <label for="message">Mensagem</label>
-            <textarea id="message" name="mensagem"></textarea>
-            <input type="submit" value="enviar" id="sendBtn">
-          </form>
+            <form class="submission-form" action="https://formsubmit.co/depois.com" method="post">
+                <div class="formAreas left">
+                    <label for="first-name">Nome</label>
+                    <input type="text" name="nome" id="first-name">
+                </div>
+                <div class="formAreas right">
+                    <label for="phone">Telefone</label>
+                    <input type="tel" name="telefone" id="phone">
+                </div>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
+                <label for="message">Mensagem</label>
+                <textarea resize="false" id="message" name="mensagem"></textarea>
+                <input type="submit" value="enviar" id="sendBtn">
+            </form>
         </div>
     </div>
 
