--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
             </div>
         </div>
         <div>
-            <img class="carro1" float="center" src="assets/images/temp2.png" alt="">
+            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp2.png" alt="">
         </div>
     </div>
 
     <!--ondeestamos-->
     <div id="ondeestamos" class="textos grade2">
         <div>
-            <img class="carro1" float="center" src="assets/images/mapa.png" alt="">
+            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/mapa.png" alt="">
         </div>
         <div class="textsize textRight">
             <h1 class="gradient-text hiddenR anima1">Abrangência em todo território nacional</h1>
@@ -77,52 +77,57 @@
             <div class="hiddenL anima2">
             <p>Motoristas, venham fazer parte do nosso time! Uma forma segura e justa de ganhar uma renda extra,</p>
             <p>basta baixar no App na Play Store.</p>
-            <a href="https://play.google.com/store/apps/details?id=com.kmcash.app"><button id="botao">Seja Um Motorista Parceiro!</button></a>
+            <a href="https://play.google.com/store/apps/details?id=com.kmcash.app"><button class="botao">Seja Um Motorista Parceiro!</button></a>
             </div>
         </div>
         <div>
-            <img class="carro1" float="center" src="assets/images/temp3.png" alt="">
+            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp3.png" alt="">
         </div>
     </div>
 
     <!--cliente-->
     <div id="cliente" class="textos grade2">
         <div>
-            <img class="carro1" float="center" src="assets/images/temp4.png" alt="">
+            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp4.png" alt="">
         </div>
         <div class="textsize textRight">
             <h1 class="gradient-text hiddenR anima1">Seja mais um cliente KM CASH.</h1>
             <div class="hiddenR anima2">
             <p>O melhor custo benefício em publicidade pelo menor preço.</p>
             <p>Venha fazer um orçamento conosco.</p>
-            <a href="#faleconosco"><button id="botao">Entre em contato conosco!</button></a>
+            <a href="#faleconosco"><button class="botao">Entre em contato conosco!</button></a>
             </div>
         </div>
     </div>
 
     <!--Fale conosco-->
-    <div id="faleconosco" class="textos grade2">
-        <div>
+    <div id="faleconosco" class="textos grade2 hiddenImg anima3">
+        <div id="qrbtn">
             <h1 class="gradient-text">Baixe o Aplicativo</h1>
+            <img width="60%" src="assets/images/qrcode.jpeg" alt="Código QR">
+            <a href="https://play.google.com/store/apps/details?id=com.kmcash.app"><button class="botao">Seja Um Motorista Parceiro!</button></a>
         </div>
         <div>
             <h1 class="gradient-text">fale conosco</h1>
 
             <form action="">
-                <label for="first-name"><i class="fa-solid fa-user icone"></i>
-                <input placeholder="Nome" type="text" name="nome" id="first-name">
+                <label for="first-name" id="inputNome">
+                    <input placeholder="Nome" type="text" name="nome" id="first-name">
+                    <i id="iconePessoa" class="fa-solid fa-user icone"></i>
                 </label>
 
-                <label for="phone"><i class="fa-solid fa-phone icone"></i>
-                <input placeholder="Telefone" type="tel" name="telefone" id="phone">
+                <label for="phone">
+                    <input placeholder="Telefone" type="tel" name="telefone" id="phone">
+                    <i id="iconePhone" class="fa-solid fa-phone icone"></i>
                 </label>
 
-                <label for="email"><i class="fa-solid fa-envelope icone"></i>
-                <input placeholder="E-mail" type="email" name="email" id="email">
+                <label for="email">
+                    <input placeholder="E-mail" type="email" name="email" id="email">
+                    <i id="iconeEmail" class="fa-solid fa-envelope icone"></i>
                 </label>
 
                 <textarea placeholder="Mensagem" resize="false" id="message" name="mensagem"></textarea>
-                <input type="submit" value="enviar" id="sendBtn">
+                <input class="botao" type="submit" value="enviar" id="sendBtn">
             </form>
 
             
@@ -145,49 +150,38 @@
     </div>
 
     <!--Footer-->
-    <div id="footer" class="texto centro grid1">
-        <div class="centro">
-            <ul>
-            <li>baixe nosso aplicativo</li>
-            <li>
-            <a href="https://play.google.com/store/apps/details?id=com.kmcash.app">
-            <img width="200px" src="https://kstatic.googleusercontent.com/files/b8608ac8812530725e54f37e8a88878d24baafe01db1f758a589ad61fb3b8ea986443abb62ef50da98e955b544824dc782358ca0d82eb76791e0bb5840b59fcc" alt="playstore">
-            </a>
-            </li>
-            </ul>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footerCol">
+                    <h4>Contato</h4>
+                    <ul>
+                        <li><a href="https://wa.me/+5524993081442?text=kmcash">(24) 99308-1442</a></li>
+                        <li><a >contato@kmcash.com.br</a></li>
+                    </ul>
+                </div>
+                <div class="footerCol">
+                    <h4>Transparencia</h4>
+                    <ul>
+                        <li><a href="lgpd.html">LGPD</a></li>
+                    </ul>
+                </div>
+                <div class="footerCol esg">
+                    <h4>Impacto ESG</h4>
+                        <img src="assets/images/impacto1.jpeg" alt="Impacto Esg 1">
+                        <img src="assets/images/impacto3.jpeg" alt="Impacto Esg 3">
+                
+                </div>
+                <div class="footerCol social">
+                    <h4>Redes Sociais</h4>
+                    <a href="https://www.instagram.com/kmcash.oficial/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://wa.me/+5524993081442?text=kmcash"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.linkedin.com/company/kmcash/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="contato@kmcash.com.br"><i class="fa-solid fa-envelope"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="centro">
-            <ul>
-                <li>redes sociais</li>
-                <li>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-width="30" height="30"
-viewBox="0 0 30 30"
-style=" fill:#000000;">    <path d="M15,3C8.373,3,3,8.373,3,15c0,6.016,4.432,10.984,10.206,11.852V18.18h-2.969v-3.154h2.969v-2.099c0-3.475,1.693-5,4.581-5 c1.383,0,2.115,0.103,2.461,0.149v2.753h-1.97c-1.226,0-1.654,1.163-1.654,2.473v1.724h3.593L19.73,18.18h-3.106v8.697 C22.481,26.083,27,21.075,27,15C27,8.373,21.627,3,15,3z"></path></svg>
-                    </a>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-width="30" height="30"
-viewBox="0 0 30 30"
-style=" fill:#000000;">    <path d="M 9.9980469 3 C 6.1390469 3 3 6.1419531 3 10.001953 L 3 20.001953 C 3 23.860953 6.1419531 27 10.001953 27 L 20.001953 27 C 23.860953 27 27 23.858047 27 19.998047 L 27 9.9980469 C 27 6.1390469 23.858047 3 19.998047 3 L 9.9980469 3 z M 22 7 C 22.552 7 23 7.448 23 8 C 23 8.552 22.552 9 22 9 C 21.448 9 21 8.552 21 8 C 21 7.448 21.448 7 22 7 z M 15 9 C 18.309 9 21 11.691 21 15 C 21 18.309 18.309 21 15 21 C 11.691 21 9 18.309 9 15 C 9 11.691 11.691 9 15 9 z M 15 11 A 4 4 0 0 0 11 15 A 4 4 0 0 0 15 19 A 4 4 0 0 0 19 15 A 4 4 0 0 0 15 11 z"></path></svg>
-                    </a>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-width="30" height="30"
-viewBox="0 0 30 30"
-style=" fill:#000000;">    <path d="M 15 3 C 8.373 3 3 8.373 3 15 C 3 17.251208 3.6323415 19.350068 4.7109375 21.150391 L 3.1074219 27 L 9.0820312 25.431641 C 10.829354 26.425062 12.84649 27 15 27 C 21.627 27 27 21.627 27 15 C 27 8.373 21.627 3 15 3 z M 10.892578 9.4023438 C 11.087578 9.4023438 11.287937 9.4011562 11.460938 9.4101562 C 11.674938 9.4151563 11.907859 9.4308281 12.130859 9.9238281 C 12.395859 10.509828 12.972875 11.979906 13.046875 12.128906 C 13.120875 12.277906 13.173313 12.453437 13.070312 12.648438 C 12.972312 12.848437 12.921344 12.969484 12.777344 13.146484 C 12.628344 13.318484 12.465078 13.532109 12.330078 13.662109 C 12.181078 13.811109 12.027219 13.974484 12.199219 14.271484 C 12.371219 14.568484 12.968563 15.542125 13.851562 16.328125 C 14.986562 17.342125 15.944188 17.653734 16.242188 17.802734 C 16.540187 17.951734 16.712766 17.928516 16.884766 17.728516 C 17.061766 17.533516 17.628125 16.864406 17.828125 16.566406 C 18.023125 16.268406 18.222188 16.319969 18.492188 16.417969 C 18.766188 16.515969 20.227391 17.235766 20.525391 17.384766 C 20.823391 17.533766 21.01875 17.607516 21.09375 17.728516 C 21.17075 17.853516 21.170828 18.448578 20.923828 19.142578 C 20.676828 19.835578 19.463922 20.505734 18.919922 20.552734 C 18.370922 20.603734 17.858562 20.7995 15.351562 19.8125 C 12.327563 18.6215 10.420484 15.524219 10.271484 15.324219 C 10.122484 15.129219 9.0605469 13.713906 9.0605469 12.253906 C 9.0605469 10.788906 9.8286563 10.071437 10.097656 9.7734375 C 10.371656 9.4754375 10.692578 9.4023438 10.892578 9.4023438 z"></path></svg>
-                    </a>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-width="30" height="30"
-viewBox="0 0 30 30"
-style=" fill:#000000;"><path d="M 4 5 C 2.9069372 5 2 5.9069372 2 7 L 2 23 C 2 24.093063 2.9069372 25 4 25 L 26 25 C 27.093063 25 28 24.093063 28 23 L 28 7 C 28 5.9069372 27.093063 5 26 5 L 4 5 z M 6.6992188 7 L 23.300781 7 L 15 13.134766 L 6.6992188 7 z M 5 9.4746094 L 15 16.865234 L 25 9.4746094 L 25 23 L 5 23 L 5 9.4746094 z"></path></svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    </footer>
 
     <!-- script -->
     <script src="app.js"></script>
