--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             <p>om tecnologia disruptiva, conseguimos otimizar o processo de logística/entrega, de forma a oferecermos o melhor preço de CARDOOR do Brasil.</p>
             </div>
         </div>
-        <div>
+        <div class="img">
             <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp2.png" alt="">
         </div>
     </div>
 
     <!--ondeestamos-->
-    <div id="ondeestamos" class="textos grade2">
-        <div>
-            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/mapa.png" alt="">
-        </div>
-        <div class="textsize textRight">
+    <div id="ondeestamos" class="textos grade2 casoInverte">
+        <div class="textsize textRight naoInverte">
             <h1 class="gradient-text hiddenR anima1">Abrangência em todo território nacional</h1>
             <p class="hiddenR anima2">Já atendemos 7 estados brasileiros e dezenas de cidades. Você escolhe a cidade e nós fazemos sua marca circular!!!</p>
+        </div>
+        <div class="img">
+            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/mapa.png" alt="">
         </div>
     </div>
 
@@ -80,23 +80,23 @@
             <a href="https://play.google.com/store/apps/details?id=com.kmcash.app"><button class="botao">Seja Um Motorista Parceiro!</button></a>
             </div>
         </div>
-        <div>
+        <div class="img">
             <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp3.png" alt="">
         </div>
     </div>
 
     <!--cliente-->
-    <div id="cliente" class="textos grade2">
-        <div>
-            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp4.png" alt="">
-        </div>
-        <div class="textsize textRight">
+    <div id="cliente" class="textos grade2 casoInverte">
+        <div class="textsize textRight naoInverte">
             <h1 class="gradient-text hiddenR anima1">Seja mais um cliente KM CASH.</h1>
             <div class="hiddenR anima2">
             <p>O melhor custo benefício em publicidade pelo menor preço.</p>
             <p>Venha fazer um orçamento conosco.</p>
             <a href="#faleconosco"><button class="botao">Entre em contato conosco!</button></a>
             </div>
+        </div>
+        <div class="img">
+            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp4.png" alt="">
         </div>
     </div>
 
