Slider de imagens (falta responsividade)

--- a/index.html
+++ b/index.html
@@ -95,8 +95,29 @@
             <a href="#faleconosco"><button class="botao">Entre em contato conosco!</button></a>
             </div>
         </div>
-        <div class="img">
-            <img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp4.png" alt="">
+        <div class="img naoInverte">
+            <!--<img class="carro1 hiddenImg anima3" float="center" src="assets/images/temp4.png" alt="">-->
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="sliderRadio" id="radio1">
+                    <input type="radio" name="sliderRadio" id="radio2">
+                    <input type="radio" name="sliderRadio" id="radio3">
+                    <input type="radio" name="sliderRadio" id="radio4">
+
+                    <div class="slide first">
+                        <img src="assets/images/temp2.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/temp2.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/temp2.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/temp2.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
