Imagens do slide e responsividade

--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
                     <input type="radio" name="sliderRadio" id="radio4">
 
                     <div class="slide first">
-                        <img src="assets/images/temp2.png" alt="">
+                        <img src="assets/images/kmcashLogoSlide.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="assets/images/temp2.png" alt="">
+                        <img src="assets/images/SmartFitLogoSlide.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="assets/images/temp2.png" alt="">
+                        <img src="assets/images/carroSlide.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="assets/images/temp2.png" alt="">
+                        <img src="assets/images/carroSlide.png" alt="">
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                 </label>
 
                 <textarea placeholder="Mensagem" resize="false" id="message" name="mensagem"></textarea>
-                <input class="botao" type="submit" value="enviar" id="sendBtn">
+                <input class="botao" type="submit" id="sendBtn">
             </form>
 
             
