Adição de imagens

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                         <img src="assets/images/SmartFitLogoSlide.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="assets/images/carroSlide.png" alt="">
+                        <img src="assets/images/formaggio.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="assets/images/carroSlide.png" alt="">
+                        <img src="assets/images/hstk.png" alt="">
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
         <div>
             <h1 class="gradient-text">fale conosco</h1>
 
-            <form action="">
+            <form class="submission-form" action="https://formsubmit.co/2245358b301bd6ca7888517436e2301d" method="post">
                 <label for="first-name" id="inputNome">
                     <input placeholder="Nome" type="text" name="nome" id="first-name">
                     <i id="iconePessoa" class="fa-solid fa-user icone"></i>
@@ -198,7 +198,7 @@
                     <a href="https://www.instagram.com/kmcash.oficial/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://wa.me/+5524993081442?text=kmcash"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://www.linkedin.com/company/kmcash/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="contato@kmcash.com.br"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="mailto: contato@kmcash.com.br"><i class="fa-solid fa-envelope"></i></a>
                 </div>
             </div>
         </div>
