--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
                     <input type="radio" name="sliderRadio" id="radio2">
                     <input type="radio" name="sliderRadio" id="radio3">
                     <input type="radio" name="sliderRadio" id="radio4">
+                    <input type="radio" name="sliderRadio" id="radio5">
+                    <input type="radio" name="sliderRadio" id="radio6">
 
                     <div class="slide first">
                         <img src="assets/images/kmcashLogoSlide.png" alt="">
@@ -112,6 +114,12 @@
                     </div>
                     <div class="slide">
                         <img src="assets/images/formaggio.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/cacula.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/images/founder.png" alt="">
                     </div>
                     <div class="slide">
                         <img src="assets/images/hstk.png" alt="">
